--- a/wp-content/themes/chugach-corp/assets/sass/utilities/mixins/_theme.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/utilities/mixins/_theme.scss
@@ -1,5 +1,9 @@
 // Theme mixins
 
+@mixin offset-left {
+    padding-left: 8.33333%;   
+}
+
 @mixin link-arrow( $color: #999, $position: left ) {
     content: '';
     display: block;
