--- a/wp-content/themes/chugach-corp/assets/sass/template/who-we-are.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/who-we-are.scss
@@ -6,6 +6,7 @@
     .section-mission {
         position: relative;
         z-index: 2;
+        padding-top: rem-calc(45);
         
         .wrap {
             @include breakpoint(large) {
