upload Culture ajax gallery and lazy load soundcloud

--- a/wp-content/themes/chugach-corp/assets/sass/plugins/_scrollreveal.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/plugins/_scrollreveal.scss
@@ -112,3 +112,13 @@ html.sr {
         visibility: hidden;
     }
 }
+
+
+// Leadership
+
+.section-leadership {
+    header,
+    .grid article {
+        visibility: hidden;
+    }
+}
