add green overlay to all video buttons

--- a/wp-content/themes/chugach-corp/assets/sass/template/_shareholders.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_shareholders.scss
@@ -136,6 +136,10 @@
                 }
             }
             
+            .play-video {
+                background: linear-gradient(270deg, rgba(#64A70B,.8) 0%, rgba(#046A38,.8) 100%);     
+            }
+            
             .width-60 {
                 width: 60%;   
             }
