--- a/wp-content/themes/chugach-corp/assets/sass/sections/_section.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/sections/_section.scss
@@ -20,6 +20,7 @@ section {
             width: 100%;
             height: 100%;
             z-index: 3;
+            //background: linear-gradient(270deg, rgba(#64A70B,.8) 0%, rgba(#046A38,.8) 100%);  
             
             svg {
                 position: absolute;
