--- a/wp-content/themes/chugach-corp/assets/sass/template/_careers.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_careers.scss
@@ -2,6 +2,162 @@
 
 .template-careers {
     
+    .careers-section {
+        position: relative;
+        z-index: 3;
+        margin-top: -5vw;
+        
+        .results-count {
+            display: none;   
+        }
+        
+        form {
+            
+            margin-bottom: rem-calc(50);
+            
+            // Standard fields
+            input[type='text'],
+            input[type='url'],
+            input[type='email'],
+            input[type='tel'],
+            input[type='number'],
+            input[type='password'],
+            input[type='file'],
+            textarea,
+            select {
+                background: #fff;
+                color: #666666!important;
+                font-size: rem-calc(14);
+                border: 1px solid #979797;
+                padding: rem-calc(8 15)!important;
+                width: 100%;
+            } 
+            select {
+                padding: rem-calc(8 15)!important;
+                -webkit-appearance: none;
+                -webkit-border-radius: 0px;
+                background-image: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24' height='24' viewBox='0 0 24 24'><path fill='%23444444' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>");
+                background-position: 99.8% 50%;
+                background-repeat: no-repeat;	
+                width: 100%;
+            }
+            
+            ::placeholder {
+                color: #4A4A4A;
+                font-size: rem-calc(14);
+            } 
+            
+            input[type="submit"] {
+                text-transform: uppercase;
+                cursor: pointer;
+                font-size: rem-calc(13);
+                line-height: 14px;
+                padding: rem-calc(10 10);
+                border-radius: 4px;
+                color: #fff;
+                background-color: $lime;
+                //box-shadow: inset 0 2px 0 0 #FFFFFF, 0 1px 2px 0 rgba(0,0,0,0.2);
+                
+                &:hover {
+                    background: #59A441;
+                }
+            }
+            
+            input[type="button"] {
+                text-transform: uppercase;
+                cursor: pointer;
+                font-size: rem-calc(13);
+                line-height: 1;
+                padding: rem-calc(9 10);
+                color: $lime;
+                border: 2px solid #59A441;
+                border-radius: 4px;
+                //box-shadow: inset 0 2px 0 0 #FFFFFF, 0 1px 2px 0 rgba(0,0,0,0.2);
+                
+                &:hover {
+                    border-color: $lime;
+                    color: $lime;
+                       
+                }
+            }
+        }
+        
+     
+        form {
+            width: 100%;
+            display: flex;  
+            flex-flow: row wrap;
+            justify-content: space-between;
+            align-items: center;    
+
+            border-radius: 4px;
+            background-color: #FFFFFF;
+            box-shadow: 1px 1px 22px 0 #979797;
+            padding: rem-calc(30 15 10 30);
+            
+            > * {
+                flex: 1 1 auto; 
+                margin-bottom: rem-calc(20);
+                margin-right: rem-calc(15);
+            }
+        }
+        
+        
+        .grid {
+         
+            .column {
+                
+                margin-bottom: rem-calc(20);
+                
+                a {
+                    display: block;
+                    height: 100%;
+                    border-radius: 8px;
+                    background-color: #64A70B;
+                    box-shadow: 0 11px 12px 0 rgba(0,0,0,0.1);
+                                        
+                    padding: rem-calc(30 20 20 20);
+                    
+                    > * {
+                        color: #fff;   
+                    }
+                    
+                    h3 {
+                        font-style: normal;
+                        font-family: $lato;
+                        font-size: rem-calc(17);
+                        line-height: 1.352941176;
+                        margin-bottom: rem-calc(20);   
+                    }
+                    
+                    span {
+                        display: block;
+                        padding-bottom: rem-calc(10);
+                    }
+                }
+            }
+            
+        }
+        
+        .jobsPagination {
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-between;
+            align-items: center;  
+            margin: rem-calc(30) auto rem-calc(75); 
+            
+            @include breakpoint(large) {
+                max-width: 60%;
+            }
+            
+                        
+            > * {
+                flex: 1 0 auto;   
+            }
+               
+        }
+    }
+    
     
     .section-introduction {
         
