--- a/wp-content/themes/chugach-corp/assets/sass/template/_careers.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_careers.scss
@@ -108,7 +108,7 @@
             .column {
                 
                 margin-bottom: rem-calc(20);
-                
+                                
                 a {
                     display: block;
                     height: 100%;
@@ -133,10 +133,84 @@
                     span {
                         display: block;
                         padding-bottom: rem-calc(10);
+                        position: relative;
+                        
+                        &:not(.company) {
+                            padding-left: 25px;  
+                        }
+                        
+                        &:before {
+                            position: absolute;
+                            top: 4px;
+                            left: 0;   
+                        }
+                        
+                        &.location {
+                            
+                            &:before {
+                                content: '';
+                                width: 15px;
+                                height: 15px;
+                                display: block;
+                                background-image: url(assets/images/careers/results/address.svg);   
+                            }
+                        }
+                        
+                        &.date {
+                            
+                            &:before {
+                                content: '';
+                                width: 15px;
+                                height: 15px;
+                                display: block;
+                                background-image: url(assets/images/careers/results/calendar.svg);   
+                            }
+                        }
+                        
+                        &.closingDate:not(:empty) {
+                            
+                            &:before {
+                                content: '';
+                                width: 15px;
+                                height: 15px;
+                                display: block;
+                                background-image: url(assets/images/careers/results/cancel.svg);   
+                            }
+                        }
                     }
                 }
             }
             
+            .column {
+                @include breakpoint(small only) {
+                    &:nth-child(even) {
+                        a {
+                            background-color: #046A38;  
+                        }
+                    }
+                }
+                
+                @include breakpoint(medium only) {
+                    &:nth-child(6n+4), // 4,5,6  10,11,12 16,17,18
+                    &:nth-child(6n+5), 
+                    &:nth-child(6n+6) { 
+                        a {
+                            background-color: #046A38;   
+                        }
+                    }
+                }
+                
+                @include breakpoint(large) {
+                    &:nth-child(8n+6),
+                    &:nth-child(8n+7), 
+                    &:nth-child(8n+8), 
+                    &:nth-child(8n+9) { 
+                        a {
+                            background-color: #046A38;   
+                        }
+                    }   
+                }
+            }
         }
         
         .jobsPagination {
