--- a/wp-content/themes/chugach-corp/assets/sass/template/_careers.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_careers.scss
@@ -213,23 +213,144 @@
             }
         }
         
-        .jobsPagination {
-            display: flex;
-            flex-flow: row wrap;
-            justify-content: space-between;
-            align-items: center;  
-            margin: rem-calc(30) auto rem-calc(75); 
-            
-            @include breakpoint(large) {
-                max-width: 60%;
-            }
-            
-                        
-            > * {
-                flex: 1 0 auto;   
-            }
-               
+        @mixin ellipsis($before:true) {
+          content: "\2026";
+          font-size: 24px;
+          display: inline-block;
+          @if($before) {
+            margin-right: 2.5px;
+          } @else {
+            margin-left: 2.5px;
+          }
         }
+        
+        .jobsPagination {
+            @include clearfix;
+                
+            ul {
+                @include list-reset;
+                display: flex;
+                justify-content: center;
+                margin: rem-calc(45 0);
+                position: relative;
+                padding: rem-calc(0 62);
+                
+                li {
+                    cursor: pointer;  
+                    margin-left: 0; 
+                }
+                                
+                .pageNumbers {
+                   
+                   display: none;
+                   
+                   @include breakpoint(large) {
+                       display: block;
+                   }
+                    
+                    
+                    margin-top: rem-calc(-5);
+                    span {
+                        display: inline-block;
+                        //font-family: $header-font-family;
+                        font-size: rem-calc(16);
+                        line-height: 1.75;
+                        color: $gray;
+                        margin: rem-calc(0 10 0);
+                        
+                        @include breakpoint(large) {
+                            margin: rem-calc(0 20 0);
+                        }
+                        
+                        &:after {
+                            content: '';
+                            display: block;
+                            width: 100%;
+                            height: 2px;
+                            background: transparent;   
+                        } 
+                    }
+                    
+                    &.active span {
+                        color: $lime;
+                        
+                        &:after {
+                            background: $lime;   
+                        }
+                    }
+                }
+                
+                &:not(.active) span:hover {
+                    color: $lime;
+                }
+                          
+                .prevPage,
+                .nextPage {
+                    position: absolute;
+                    
+                    span {
+                        @include screen-reader-text;   
+                    }
+                    
+                    
+                    display: block;
+                    width: rem-calc( $nav-arrow-width );
+                    height: rem-calc( $nav-arrow-height );  
+                                
+                    &:before,
+                    &:after {
+                        content: '';
+                        display: block;
+                        background-position: center;
+                        background-repeat: no-repeat;
+                        background-position: left center;
+                        height: $nav-arrow-height; 
+                        background-size: auto $nav-arrow-height;
+                    }
+                    
+                    &.disable {
+                        cursor: default; 
+                        opacity: 0;  
+                    }
+                    
+                }
+                                
+                .prevPage {
+                    
+                    left: 0; 
+                    
+                    &:before {
+                        content: '';
+                        @include nav-arrow( $nav-arrow-color );
+                    }
+                    
+                    
+                    &:not(.disable):hover:before {
+                        @include nav-arrow( $nav-arrow-color-hover );
+                    }   
+                    
+                }
+                
+                .nextPage {                    
+                    
+                    right: 0; 
+                    
+                    &:before,
+                    &:after {
+                        background-position: right center;
+                    }
+                    
+                    &:before {
+                        content: '';
+                        @include nav-arrow( $nav-arrow-color, right );
+                        
+                    } 
+                }
+                
+            }
+            
+        }
+
     }
     
     
