Fix slick slider preload

--- a/wp-content/themes/chugach-corp/assets/sass/sections/_stories.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/sections/_stories.scss
@@ -2,6 +2,14 @@
 
 .section-stories {
     
+    opacity: 0;
+    visibility: hidden;
+    
+    &.images-loaded {
+        opacity: 1;
+        visibility: visible;
+    }
+    
     margin-bottom: rem-calc(55);
     
     header { 
