--- a/wp-content/themes/chugach-corp/assets/sass/template/_post.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_post.scss
@@ -265,6 +265,14 @@
     
     .section-related-posts {
         
+        opacity: 0;
+        visibility: hidden;
+        
+        &.images-loaded {
+            opacity: 1;
+            visibility: visible;
+        }
+        
         padding-bottom: rem-calc(55);
         
         .slick {
