--- a/wp-content/themes/chugach-corp/assets/sass/sections/_hero.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/sections/_hero.scss
@@ -42,6 +42,20 @@
                 min-height: 30vw;
             }
             
+            // See Hack - CSS target only IE11 and IE10 (media query)
+            @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+                @include breakpoint(large) {
+                    padding: rem-calc(0 0 125);
+                }
+                
+                &:after {
+                  content: '';
+                  display: block;
+                  min-height: inherit;
+                  font-size: 0;
+                }
+            }
+            
         }
         
         .hero-content {
