Fix shareholder backgorund cover issue.

--- a/wp-content/themes/chugach-corp/assets/sass/sections/_hero.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/sections/_hero.scss
@@ -42,7 +42,7 @@
                 min-height: 30vw;
             }
             
-            &after{
+            &:after{
                 content:'';
                 min-height:inherit;
                 font-size:0;
