--- a/wp-content/themes/chugach-corp/assets/sass/template/_post.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_post.scss
@@ -43,6 +43,13 @@
             }
         }
         
+        .author {
+            margin-top: rem-calc(25);
+            p {
+                margin-bottom: rem-calc(5);   
+            }
+        }
+        
         .posted-on {
             margin-top: rem-calc(25);
             display: block;
@@ -51,6 +58,34 @@
             line-height: 18px;   
             font-family: $georgia;
             font-style: italic;
+        }
+        
+    }
+    
+    .slider {
+     
+        .background:before {
+          content: "";
+          width: 1px;
+          margin-left: -1px;
+          float: left;
+          height: 0;
+          padding-top: 56.25%;
+        }
+        .background:after { /* to clear float */
+          content: "";
+          display: table;
+          clear: both;
+        }
+        
+        .slick-arrows {
+            display: flex;
+            justify-content: space-between;
+            margin: rem-calc(10) auto $global-margin;
+            
+            > *:first-child {
+                margin-right: rem-calc(36);   
+            }
         }
         
     }
