Fix post slider and fix the culture image

--- a/wp-content/themes/chugach-corp/assets/sass/template/_culture.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_culture.scss
@@ -6,7 +6,7 @@
     .section-introduction {
         
         .has-video {
-            display: inline-block;
+            display: block;
             position: relative;
             
             &:after {
