remove footer animation, footer not working correctly with reveal.

--- a/wp-content/themes/chugach-corp/assets/sass/plugins/_scrollreveal.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/plugins/_scrollreveal.scss
@@ -8,11 +8,11 @@ html.sr .load-hidden {
 
 html.sr .section-footer-cta {
     
-    visibility: hidden;
+    //visibility: hidden;
     
     h3,
     .shrink {
-        visibility: hidden;   
+        //visibility: hidden;   
     }
 }
 
